# event-box

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: publish-to-test-pypi.yml
sql/: events_table.sql
src/event_box/: __init__.py  event.py  handler.py  tx_inbox.py
src/event_box/storage/: pg_eventsource.py
src/pyxbox/: __init__.py  datetime.py  handler.py  ports.py  tx_outbox.py
src/pyxbox/storage/: pg_eventstore.py
tests/: test_e2e.py
